removed some unneeded dependencies from def-login and my-app.html

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -28,8 +28,7 @@
     <!--NEED TO PUT THIS SOMEWHERE ELSE LATER ONLY USED TO CREATE NEW USERS-->
     <firebase-auth
       id="createUser"
-      app-name="user2"
-      >
+      app-name="user2">
     </firebase-auth>
     <!--MOVE THIS WHEN REFACTORING CODE DOES NOT BELONG HERE!-->
     <firebase-document
