updated dependencies to correct paths in order to enable proper build

--- a/src/elements/guuey-table-input/guuey-table-input.html
+++ b/src/elements/guuey-table-input/guuey-table-input.html
@@ -9,7 +9,7 @@
       data="{{inputData}}"
       path="{{route}}">
     </firebase-document>
-    <style include "materialize-style">
+    <style include "">
       .sectionHeading{
         background-color:#42c6ff;
         width:100%;
