--- a/src/elements/guuey-text-input/guuey-text-input.html
+++ b/src/elements/guuey-text-input/guuey-text-input.html
@@ -19,7 +19,7 @@ fieldDisabled(boolean)
       data="{{inputData}}"
       path="{{route}}">
     </firebase-document>
-    <style include="materialize-style"></style>
+    <style include=""></style>
     <style>
       .sectionHeading{
         background-color:#42c6ff;
