--- a/src/elements/guuey-time-input/guuey-time-input.html
+++ b/src/elements/guuey-time-input/guuey-time-input.html
@@ -16,7 +16,7 @@ label(string)
       path="{{route}}"
       data="{{timeData}}">
     </firebase-document>
-    <style include="materialize-style"></style>
+    <style include=""></style>
     <style>
       .sectionHeading{
         background-color:#42c6ff;
