--- a/src/pages/care-plan/su-medical/su-medical.html
+++ b/src/pages/care-plan/su-medical/su-medical.html
@@ -12,7 +12,7 @@
       app-name="main">
     </firebase-document>
 
-    <style include="materialize-style"></style>
+    <style include=""></style>
     <style>
       paper-card{
         width:80%;
