--- a/src/pages/admin/ad-settings/ad-settings.html
+++ b/src/pages/admin/ad-settings/ad-settings.html
@@ -4,7 +4,7 @@
 
   <template>
 
-    <style include="materialize-style"></style>
+    <style include=""></style>
     <style>
       .mainCard{
         width:80%;
