--- a/src/pages/care-plan/su-care-review/su-care-review.html
+++ b/src/pages/care-plan/su-care-review/su-care-review.html
@@ -101,6 +101,7 @@
         min-height:100px;
       }
       .mainContainer{
+        padding-top:20px;
         position:relative;
       }
       .mainFab{
