--- a/src/my-app.html
+++ b/src/my-app.html
@@ -142,6 +142,8 @@
       }
       .buttonContainer{
         text-align:center;
+        padding:0px;
+        margin:0px;
       }
       .toolbarButton{
         width: 35px;
@@ -167,6 +169,9 @@
       }
       #mainToolbar{
       }
+      .toolbarButtonContainer{
+        width:90%;
+      }
     </style>
 
     <app-drawer-layout fullbleed>
@@ -176,25 +181,25 @@
 
         <app-header condenses reveals effects="waterfall">
           <template is="dom-if" if="{{loginPageInactive(page)}}">
-            <app-toolbar class="app-grid">
-
-              <span class="buttonContainer">
-                <paper-icon-button class="toolbarButton" icon="menu" on-tap="toggleDrawer"></paper-icon-button>
-              </span>
-              <span class="buttonContainer">
-                <paper-icon-button class="toolbarButton" icon="icons:home" on-tap="goHome"></paper-icon-button>
-              </span>
-              <span class="buttonContainer">
-                <paper-icon-button class="toolbarButton notifyButton" id="notify" icon="social:notifications"></paper-icon-button>
-                <paper-badge id="notifyBadge" for="notify" label="4"></paper-badge>
-              </span>
-              <span class="buttonContainer">
-                <paper-icon-button class="toolbarButton" icon="icons:search" on-tap="search"></paper-icon-button>
-              </span>
-              <span class="buttonContainer">
-                <paper-icon-button class="toolbarButton logoutButton" on-tap="logout" icon="icons:account-circle"></paper-icon-button>
-              </span>
-
+            <app-toolbar>
+              <div class="toolbarButtonContainer app-grid">
+                <span class="buttonContainer">
+                  <paper-icon-button class="toolbarButton" icon="menu" on-tap="toggleDrawer"></paper-icon-button>
+                </span>
+                <span class="buttonContainer">
+                  <paper-icon-button class="toolbarButton" icon="icons:home" on-tap="goHome"></paper-icon-button>
+                </span>
+                <span class="buttonContainer">
+                  <paper-icon-button class="toolbarButton notifyButton" id="notify" icon="social:notifications"></paper-icon-button>
+                  <paper-badge id="notifyBadge" for="notify" label="4"></paper-badge>
+                </span>
+                <span class="buttonContainer">
+                  <paper-icon-button class="toolbarButton" icon="icons:search" on-tap="search"></paper-icon-button>
+                </span>
+                <span class="buttonContainer">
+                  <paper-icon-button class="toolbarButton logoutButton" on-tap="logout" icon="icons:account-circle"></paper-icon-button>
+                </span>
+              </div>
             </app-toolbar>
           </template>
         </app-header>
@@ -536,7 +541,6 @@
         };
       },
       _computeDrawerHidden:function(page){
-        console.log(page.slice(0,3));
         if(page.slice(0,3)==="def" || page.slice(0,2)==="ad" || page==="su-create"){
           return true;
         } else {
