final changes before testing

--- a/src/pages/care-plan/su-care-review/su-care-review.html
+++ b/src/pages/care-plan/su-care-review/su-care-review.html
@@ -271,7 +271,7 @@
                 label="Reason(s) why agreement not given to the service user"
                 value="{{agreeData.reasonAgreementNotGiven}}"
                 auto-validate
-                pattern="[a-zA-Z\s\.]"
+                pattern="[a-zA-Z\s\.]*"
                 error-message="Please explain with letters and periods only.">
               </paper-input>
 
