--- a/src/pages/default/def-login/def-login.html
+++ b/src/pages/default/def-login/def-login.html
@@ -168,7 +168,11 @@
         },
         newAccount:{
           type:Object,
-          value:{},
+          value:{
+            username:"",
+            password:"",
+            home:""
+          },
         },
         state:{
           type:String,
