--- a/src/my-app-dependencies.html
+++ b/src/my-app-dependencies.html
@@ -22,4 +22,5 @@
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html" />
 <link rel="import" href="../bower_components/iron-icons/social-icons.html" />
 <link rel="import" href="../bower_components/iron-icons/hardware-icons.html" />
+<link rel="import" href="../bower_components/paper-toast/paper-toast.html" />
 <link rel="import" href="elements/admin-drawer/admin-drawer.html" />
