--- a/src/my-app.html
+++ b/src/my-app.html
@@ -174,7 +174,64 @@
       }
     </style>
 
-    <app-drawer-layout fullbleed>
+    <app-drawer-layout fullbleed id="appDrawerLayout" force-narrow>
+
+      <!--admin drawer that contains admin account info and functions-->
+      <admin-drawer id="adminDrawer" home="{{home}}" admin="{{param}}" email="{{user.email}}" opened="{{opened}}"></admin-drawer>
+      <!--second drawer to contain target info links (company service user etc...) link up to db later-->
+      <app-drawer align="end" id="suDrawer" swipe-open>
+        <div class="customContainer" style="height: 100%; overflow: auto;">
+          <app-toolbar>Company Details</app-toolbar>
+          <paper-listbox>
+            <paper-item>
+              <paper-item-body two-line>
+                <div secondary>Company Name</div>
+                <div>{{careHomeProfile.name}}</div>
+              </paper-item-body>
+            </paper-item>
+            <paper-item>
+              <paper-item-body two-line>
+                <div secondary>Number of Service Users</div>
+                <div>12</div>
+              </paper-item-body>
+            </paper-item>
+            <paper-item>
+              <paper-item-body two-line>
+                <div secondary>Notifications</div>
+                <div>4</div>
+              </paper-item-body>
+            </paper-item>
+          </paper-listbox>
+
+          <div class="menuLinksContainer">
+            <template is="dom-if" if="{{_patientSelected(category, param)}}">
+              <iron-selector selected="{{page}}" attr-for-selected="name" class="drawer-list" role="navigation">
+                <a name="su-profile" href="/{{home}}/care-plan/su-profile/{{param}}">Personal Profile<a>
+                <a name="su-pre" href="/{{home}}/care-plan/su-pre/{{param}}">Pre-Admission Assessment</a>
+                <a name="su-care" href="/{{home}}/care-plan/su-care/{{param}}">Care Plan</a>
+                <a name="su-care-review" href="/{{home}}/care-plan/su-care-review/{{param}}">Care Plan Review</a>
+                <a name="su-medical" href="/{{home}}/care-plan/su-medical/{{param}}">Medical Assessment</a>
+                <a name="su-medication" href="/{{home}}/care-plan/su-medication/{{param}}">Medication Outline</a>
+                <a name="su-risk" on-tap="setPage">Risk Assessment</a>
+                <a name="su-goals" on-tap="setPage">Personal Goals</a>
+              </iron-selector>
+            </template>
+
+            <template is="dom-if" if="{{!_patientSelected(category, param)}}">
+              <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
+                <a class="disabled">Pre-Admission Assessment</a>
+                <a class="disabled">Personal Profile<a>
+                <a class="disabled">Care Plan</a>
+                <a class="disabled">Care Plan Review</a>
+                <a class="disabled">Medical Assessment</a>
+                <a class="disabled">Medication Outline</a>
+                <a class="disabled">Risk Assessment</a>
+                <a class="disabled">Personal Goals</a>
+              </iron-selector>
+            </template>
+          </div>
+        </div>
+      </app-drawer>
 
       <!-- Main content -->
       <app-header-layout>
@@ -243,67 +300,12 @@
         </iron-pages>
 
       </app-header-layout>
-        <!--admin drawer that contains admin account info and functions-->
-        <admin-drawer id="adminDrawer" home="{{home}}" admin="{{param}}" email="{{user.email}}" opened="{{opened}}"></admin-drawer>
-        <!--second drawer to contain target info links (company service user etc...) link up to db later-->
-        <app-drawer align="right" id="suDrawer" swipe-open>
-          <div class="customContainer" style="height: 100%; overflow: auto;">
-            <app-toolbar>Company Details</app-toolbar>
-            <paper-listbox>
-              <paper-item>
-                <paper-item-body two-line>
-                  <div secondary>Company Name</div>
-                  <div>{{careHomeProfile.name}}</div>
-                </paper-item-body>
-              </paper-item>
-              <paper-item>
-                <paper-item-body two-line>
-                  <div secondary>Number of Service Users</div>
-                  <div>12</div>
-                </paper-item-body>
-              </paper-item>
-              <paper-item>
-                <paper-item-body two-line>
-                  <div secondary>Notifications</div>
-                  <div>4</div>
-                </paper-item-body>
-              </paper-item>
-            </paper-listbox>
-            <div class="divider">
 
-            </div>
-            <div class="menuLinksContainer">
-              <template is="dom-if" if="{{_patientSelected(category, param)}}">
-                <iron-selector selected="{{page}}" attr-for-selected="name" class="drawer-list" role="navigation">
-                  <a name="su-profile" href="/{{home}}/care-plan/su-profile/{{param}}">Personal Profile<a>
-                  <a name="su-pre" href="/{{home}}/care-plan/su-pre/{{param}}">Pre-Admission Assessment</a>
-                  <a name="su-care" href="/{{home}}/care-plan/su-care/{{param}}">Care Plan</a>
-                  <a name="su-care-review" href="/{{home}}/care-plan/su-care-review/{{param}}">Care Plan Review</a>
-                  <a name="su-medical" href="/{{home}}/care-plan/su-medical/{{param}}">Medical Assessment</a>
-                  <a name="su-medication" href="/{{home}}/care-plan/su-medication/{{param}}">Medication Outline</a>
-                  <a name="su-risk" on-tap="setPage">Risk Assessment</a>
-                  <a name="su-goals" on-tap="setPage">Personal Goals</a>
-                </iron-selector>
-              </template>
-              <template is="dom-if" if="{{!_patientSelected(category, param)}}">
-                <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-                  <a class="disabled">Pre-Admission Assessment</a>
-                  <a class="disabled">Personal Profile<a>
-                  <a class="disabled">Care Plan</a>
-                  <a class="disabled">Care Plan Review</a>
-                  <a class="disabled">Medical Assessment</a>
-                  <a class="disabled">Medication Outline</a>
-                  <a class="disabled">Risk Assessment</a>
-                  <a class="disabled">Personal Goals</a>
-                </iron-selector>
-              </template>
-            </div>
-          </div>
-        </app-drawer>
     </app-drawer-layout>
 
     <paper-toast
-      id="mainToast">
+      id="mainToast"
+      class="fit-bottom">
     </paper-toast>
 
   </template>
@@ -322,6 +324,8 @@
         this.addEventListener('addUserToHomeIndex', this.addUserToHomeIndex);
         this.addEventListener('addUserToIndex', this.addUserToIndex);
         this.addEventListener('emailSignIn',this.emailSignIn);
+        this.addEventListener('openToast', this.openToast);
+        this.addEventListener('openDrawer', this.openDrawer);
       },
       //create new service user for an already existing home
       createNewUser:function(e){
@@ -371,11 +375,8 @@
       //function to create new user for new home
       createNewAccount:function(e){
         //create new user for new home
-        console.log(e.detail.username);
-        console.log(e.detail.password);
         this.$.auth.createUserWithEmailAndPassword(e.detail.username, e.detail.password)
           .then(function(user){
-            console.log(user.uid);
             this.$.homeDB.path=null;
             this.$.homeDB.data={
               details:{
@@ -407,7 +408,6 @@
               }.bind(this));
           }.bind(this))
           .catch(function(error){
-            console.log(error);
             this.$.mainToast.text=error;
             this.$.mainToast.open()
           }.bind(this));
@@ -482,9 +482,11 @@
           this.resolveUrl('pages/'+this.category+'/' + page +'/'+page+'.html'), null, null, true);
         if(page.slice(0,3)==="def" || page.slice(0,2)==="ad" || page==="su-create"){
           //drawer and rest of page not rendering properly after being hidden and switching pages...
-          this.$.suDrawer.hidden=true;
+          this.$.appDrawerLayout.forceNarrow=true;
+          this.$.suDrawer.close();
         } else {
-          this.$.suDrawer.hidden=false;
+          this.$.appDrawerLayout.forceNarrow=false;
+          this.$.suDrawer.open();
         }
       },
       _paramChanged:function(param){
@@ -553,11 +555,18 @@
         };
       },
       _computeDrawerHidden:function(page){
-        if(page.slice(0,3)==="def" || page.slice(0,2)==="ad" || page==="su-create"){
+        if(page.slice(0,3)==="def" || page.slice(0,2)==="ad"){
           return true;
         } else {
           return false;
         }
+      },
+      openToast:function(e){
+        this.$.mainToast.text=e.detail.toastText;
+        this.$.mainToast.open();
+      },
+      openDrawer:function(){
+        this.$.suDrawer.open();
       }
     });
 
