--- a/src/pages/care-plan/su-create/su-create.html
+++ b/src/pages/care-plan/su-create/su-create.html
@@ -93,6 +93,7 @@
           tabindex="3"
           required
           auto-validate
+          guuey-date={{guueyDOB}}
           error-message="Please enter a date by clicking on tapping/clicking on this field.">
         </guuey-date-input>
 
@@ -112,6 +113,7 @@
           tabindex="5"
           required
           auto-validate
+          guuey-date="{{guueyDOA}}"
           error-message="Please enter a date by clicking on tapping/clicking on this field.">
         </guuey-date-input>
 
@@ -172,12 +174,6 @@
           pattern="[a-zA-Z\s]*"
           error-message="Please enter a nationality without special characters.">
         </vaadin-combo-box>
-
-        <div class="buttonContainer">
-
-          <paper-button class="guuey-button" on-tap="createNewPatient">Create New Service User</paper-button>
-
-        </div>
 
       </div>
     </paper-card>
@@ -546,12 +542,12 @@
         }
       },
       observers:[
-        "editQuery(query950)"
+        "editQuery(query950)",
+        "requirementsMet(data)"
       ],
       createNewPatient:function(){
         var path="/homes/"+this.home+"/patients/"+this.patient+"/currentStatus";
         this.$.newPatientDB.setStoredValue(path, "active");
-        window.location.href="/"+this.home+"/care-plan/su-profile/"+this.patient;
       },
       editQuery:function(query950){
         if(query950){
@@ -561,6 +557,36 @@
           this.customStyle["--app-grid-columns"]="2";
           this.updateStyles();
         }
+      },
+      requirementsMet:function(data){
+        if(!data.fName){
+          this.fire("openToast", {toastText: "First name is required before saving the new service user."});
+          return;
+        } else if(!data.lName){
+          this.fire("openToast", {toastText: "Last name is required before saving the new service user."});
+          return;
+        } else if(!this.guueyDOB){
+          this.fire("openToast", {toastText: "Date of birth is required before saving the new service user."});
+          return;
+        } else if(!this.guueyDOA){
+          this.fire("openToast", {toastText: "Date of assessment is required before saving the new service user."});
+          return;
+        } else if(!data.partnership){
+          this.fire("openToast", {toastText: "Partnership status is required before saving the new service user."});
+          return;
+        } else if(!data.whereAssessed){
+          this.fire("openToast", {toastText: "Where assessed is required before saving the new service user."});
+        } else if(!data.religion){
+          this.fire("openToast", {toastText: "Religion is required before saving the new service user."});
+        } else if(!data.ethnicity){
+          this.fire("openToast", {toastText: "Ethnicity is required before saving the new service user."});
+        } else if(!data.nationality){
+          this.fire("openToast", {toastText: "Nationality is required before saving the new service user."});
+        } else {
+          this.createNewPatient();
+          this.fire("openToast", {toastText: "New service user has been saved. You can continue editing on this page or navigate to other pages for the service user."});
+          this.fire("openDrawer");
+        };
       }
     });
 
