added in toasts

--- a/src/pages/care-plan/su-profile/su-profile.html
+++ b/src/pages/care-plan/su-profile/su-profile.html
@@ -165,6 +165,7 @@
               tabindex="3"
               required
               auto-validate
+              guuey-date={{guueyDOB}}
               error-message="Please enter a date by clicking on tapping/clicking on this field.">
             </guuey-date-input>
 
@@ -183,6 +184,7 @@
               tabindex="5"
               required
               auto-validate
+              guuey-date="{{guueyDOA}}"
               error-message="Please enter a date by clicking on tapping/clicking on this field.">
             </guuey-date-input>
 
@@ -921,7 +923,9 @@
         }
       },
       observers:[
-        "editquery900(query900)"
+        "editquery900(query900)",
+        "requirementsMet(profileData)",
+        "secondaryRequirementsMet(nextOfKinData)"
       ],
       print:function(e){
         var printable=window.open("","printable");
@@ -977,6 +981,49 @@
           this.customStyle["--app-grid-columns"]="2";
           this.updateStyles();
         }
+      },
+      requirementsMet:function(data){
+        if(!data.fName){
+          this.fire("openToast", {toastText: "First name is required before saving the new service user."});
+          return;
+        } else if(!data.lName){
+          this.fire("openToast", {toastText: "Last name is required before saving the new service user."});
+          return;
+        } else if(!this.guueyDOB){
+          this.fire("openToast", {toastText: "Date of birth is required before saving the new service user."});
+          return;
+        } else if(!this.guueyDOA){
+          this.fire("openToast", {toastText: "Date of assessment is required before saving the new service user."});
+          return;
+        } else if(!data.partnership){
+          this.fire("openToast", {toastText: "Partnership status is required before saving the new service user."});
+          return;
+        } else if(!data.whereAssessed){
+          this.fire("openToast", {toastText: "Where assessed is required before saving the new service user."});
+        } else if(!data.religion){
+          this.fire("openToast", {toastText: "Religion is required before saving the new service user."});
+        } else if(!data.ethnicity){
+          this.fire("openToast", {toastText: "Ethnicity is required before saving the new service user."});
+        } else if(!data.nationality){
+          this.fire("openToast", {toastText: "Nationality is required before saving the new service user."});
+        } else {
+          return true;
+        };
+      },
+      secondaryRequirementsMet(data){
+        if(this.requirementsMet){
+          if(!data.name){
+            this.fire("openToast", {toastText: "Next of kin name is required."});
+          } else if(!data.relationship){
+            this.fire("openToast", {toastText: "Relationship to the service user is required."})
+          } else if(!data.address){
+            this.fire("openToast", {toastText: "Next of kin address is required."})
+          } else if(!data.phone){
+            this.fire("openToast", {toastText: "Next of kin phone number is required."})
+          } else {
+            return true;
+          };
+        };
       }
     });
 
