--- a/src/elements/guuey-date-input/guuey-date-input.html
+++ b/src/elements/guuey-date-input/guuey-date-input.html
@@ -54,7 +54,7 @@ label(string)
       <paper-date-picker id="paperDate" date={{date}}></paper-date-picker>
       <div class="buttons">
         <paper-button dialog-dismiss>Cancel</paper-button>
-        <paper-button on-tap="saveMed">Save</paper-button>
+        <paper-button dialog-dismiss>Save</paper-button>
       </div>
     </paper-dialog>
 
