--- a/src/elements/guuey-table-row/dependencies.html
+++ b/src/elements/guuey-table-row/dependencies.html
@@ -4,3 +4,4 @@
 <link rel="import" href="../../../bower_components/paper-input/paper-input.html" />
 <link rel="import" href="../../../bower_components/paper-checkbox/paper-checkbox.html" />
 <link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html" />
+<link rel="import" href="../../../bower_components/iron-icons/communication-icons.html" />
