exposed created data to parent element for toasts

--- a/src/elements/guuey-text-input/guuey-text-input.html
+++ b/src/elements/guuey-text-input/guuey-text-input.html
@@ -84,7 +84,17 @@ fieldDisabled(boolean)
         },
         label2:{
           type:String,
+        },
+        guueyText:{
+          type:String,
+          notify:true
         }
+      },
+      observers:[
+        "_inputChanged(inputData.info)"
+      ],
+      _inputChanged:function(data){
+        this.guueyText=data;
       }
     });
 
